--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,7 @@
 $lt-gray: #ddd;
 $background-dark: #512DA8;
 $background-light: #9575CD;
+$background-moredark: #4527A0;
 $background-pale: #D1C4E9;
 
 @mixin zero-margin($pad-up-down, $pad-left-right) {
@@ -13,4 +14,8 @@ $background-pale: #D1C4E9;
     background: $background-light ;
     color:floralwhite;
     min-height: 150px;
+}
+
+.active {
+    background: $background-moredark;
 }
