--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -16,6 +16,7 @@
         <p>{{dish.description}}</p>
       </md-card-content>
       <md-card-actions layout="row" layout-align="end center">
+          <button md-button (click)="goBack()">BACK</button> 
           <button md-button>LIKE</button>
           <button md-button>SHARE</button>
         </md-card-actions>
