--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -42,6 +42,7 @@
     </md-card-header>
     <img md-card-image src={{leader.image}} alt={{leader.name}}>
     <md-card-content>
+      <p>{{leader.designation}}</p>
       <p>{{leader.description}}
       </p>
     </md-card-content>
