--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -50,6 +50,38 @@
           </md-list>
         </md-card-content>
       </md-card>
+  
+
+  <!-- COMMENT FORM -->
+  <form novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
+      <p>
+        <md-input-container class="full-width"
+         dividerColor="{{formErrors.name ? 'warn' : 'primary'}}">
+          <input mdInput formControlName="name" placeholder="Name" type="text" required>
+          <md-hint>
+            <span [hidden]="!(formErrors.name)">
+              {{formErrors.name}}</span>
+          </md-hint>
+        </md-input-container>
+      </p>
+      <p>
+        
+          <md-slider thumbLabel tickInterval="1" min="1" max="5" step="1" value="5"></md-slider>
+       
+      </p>
+      <p>
+        <md-input-container class="full-width">
+          <textarea mdInput formControlName="comment"  placeholder="Your Comment" rows=12 required></textarea>
+          <md-hint>
+              <span [hidden]="!(formErrors.comment)">
+                {{formErrors.comment}}</span>
+            </md-hint>
+        </md-input-container>
+      </p>
+      
+      <button type="submit" md-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
+    </form>
+
   </div>
 
 </div>
