--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -47,27 +47,32 @@
               <br>
             <p md-line><span>--{{comment.author}} {{comment.date | date}}</span></p>
             </md-list-item>
+
+            <md-list-item *ngIf="commentForm.valid">
+              <p md-line><span>{{commentForm.value.comment}}</span></p>
+              <br>
+              <p md-line><span>{{commentForm.value.rating}} Stars</span></p>
+              <br>
+              <p md-line><span>--{{commentForm.value.author}} </span></p>
+            </md-list-item>
           </md-list>
         </md-card-content>
       </md-card>
-  
 
   <!-- COMMENT FORM -->
   <form novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
       <p>
         <md-input-container class="full-width"
-         dividerColor="{{formErrors.name ? 'warn' : 'primary'}}">
-          <input mdInput formControlName="name" placeholder="Name" type="text" required>
+         dividerColor="{{formErrors.author ? 'warn' : 'primary'}}">
+          <input mdInput formControlName="author" placeholder="Name" type="text" required>
           <md-hint>
-            <span [hidden]="!(formErrors.name)">
-              {{formErrors.name}}</span>
+            <span [hidden]="!(formErrors.author)">
+              {{formErrors.author}}</span>
           </md-hint>
         </md-input-container>
       </p>
       <p>
-        
-          <md-slider thumbLabel tickInterval="1" min="1" max="5" step="1" value="5"></md-slider>
-       
+          <md-slider thumbLabel formControlName="rating" tickInterval="1" min="1" max="5" step="1" value="5"></md-slider>       
       </p>
       <p>
         <md-input-container class="full-width">
