--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -12,7 +12,7 @@
       <md-card-header>
         <h3>{{dish.name | uppercase}}</h3>
       </md-card-header>
-      <img md-card-image src={{dish.image}}/>
+      <img md-card-image src="{{BaseURL + dish.image}}"/>
       <md-card-content>
         <p>{{dish.description}}</p>
       </md-card-content>
