--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,99 +1,92 @@
-<div class="container"
-    fxLayout="row"
-    fxLayout.sm="column"
-    fxLayout.xs="column"
-    fxLayoutAlign.gt-md="space-around center"
-    fxLayoutGap="10px" 
-    fxLayoutGap.xs="0"
-    *ngIf="dish">
+<!-- <p>
+  dishdetail works!
+</p> -->
 
-  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
-    <md-card >
+<div class="container"
+     fxLayout="row"
+     fxLayout.sm="column"
+     fxLayout.xs="column"
+     fxLayoutAlign.gt-md="space-around center"
+     fxLayoutGap="10px"
+     fxLayoutGap.xs="0">
+
+  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility" [@expand]>
+    <md-card>
       <md-card-header>
-        <h3>{{dish.name | uppercase}}</h3>
+        <md-card-title>
+          <h3>{{dish.name | uppercase}}</h3>
+        </md-card-title>
       </md-card-header>
-      <img md-card-image src="{{BaseURL + dish.image}}"/>
+      <img md-card-image src="{{BaseURL + dish.image}}" alt={{dish.name}}>
       <md-card-content>
-        <p>{{dish.description}}</p>
+        <p>{{dish.description}}
+        </p>
       </md-card-content>
-      <md-card-actions layout="row" layout-align="end center">
-          <button md-button [routerLink]="['/dishdetail', prev]">
-            <span class="fa fa-chevron-left fa-lg"></span>
-          </button>
-          <button md-button (click)="goBack()">BACK</button> 
-          <button md-button>LIKE</button>
-          <button md-button>SHARE</button>
-          <span class="flex-spacer"></span>
-          <button md-button [routerLink]="['/dishdetail', next]">
-            <span class="fa fa-chevron-right fa-lg"></span>
-          </button>
-        </md-card-actions>
+      <md-card-actions>
+        <button md-button [routerLink]="['/dishdetail', prev]">
+			<span class="fa fa-chevron-left fa-lg"></span>
+        </button>
+		<button md-button (click)="goBack()">BACK</button>
+        <button md-button>LIKE</button>
+        <button md-button>SHARE</button>
+			<span class="flex-spacer"></span>
+        <button md-button [routerLink]="['/dishdetail', next]">
+			<span class="fa fa-chevron-right fa-lg"></span>
+        </button>
+      </md-card-actions>
     </md-card>
   </div>
+  
 
-  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
-      <md-card >
-        
-        <md-card-header>
-          <h3>Comments</h3>
-        </md-card-header>
-
-        <md-card-content>
-          <md-list *ngIf="dish">
-            <md-list-item *ngFor="let comment of dish.comments">
-              <p md-line><span>{{comment.comment}}</span></p>
-              <br>
-              <p md-line><span>{{comment.rating}} Stars</span></p>
-              <br>
-            <p md-line><span>--{{comment.author}} {{comment.date | date}}</span></p>
-            </md-list-item>
-
-            <md-list-item *ngIf="commentForm.valid">
-              <p md-line><span>{{commentForm.controls.comment.value}}</span></p>
-              <br>
-              <p md-line><span>{{commentForm.value.rating}} Stars</span></p>
-              <br>
-              <p md-line><span>--{{commentForm.value.author}} </span></p>
-            </md-list-item>
-          </md-list>
-        </md-card-content>
-      </md-card>
-
-  <!-- COMMENT FORM -->
-  <form novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
-      <p>
-        <md-input-container class="full-width"
-         dividerColor="{{formErrors.author ? 'warn' : 'primary'}}">
-          <input mdInput formControlName="author" placeholder="Name" type="text" required>
-          <md-hint>
-            <span [hidden]="!(formErrors.author)">
-              {{formErrors.author}}</span>
-          </md-hint>
-        </md-input-container>
-      </p>
-      <p>
-          <md-slider thumbLabel formControlName="rating" tickInterval="1" min="1" max="5" step="1" value="5"></md-slider>       
-      </p>
-      <p>
-        <md-input-container class="full-width">
-          <textarea mdInput formControlName="comment"  placeholder="Your Comment" rows=12 required></textarea>
-          <md-hint>
-              <span [hidden]="!(formErrors.comment)">
-                {{formErrors.comment}}</span>
+  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility" [@expand]>
+    <md-list>
+      <h2>Comments</h2>
+      <md-list-item *ngFor="let cmts of dish.comments">
+        <p md-line>{{cmts.comment}}</p>
+        <p md-line>{{cmts.rating}} Stars</p>
+        <p md-line>--{{cmts.author}}  <span>{{cmts.date | date}}</span></p>
+      </md-list-item>
+      <md-list-item *ngIf="dishdetailForm.valid">
+        <p md-line>{{dishdetailForm.value.comment}}</p>
+        <p md-line>{{dishdetailForm.value.rating}} Stars</p>
+        <p md-line>--{{dishdetailForm.value.author}}  <span></span></p>
+      </md-list-item>
+      <form novalidate [formGroup]="dishdetailForm" (ngSubmit)="onSubmit()">
+        <p>
+          <md-input-container class="half-width"
+                              dividerColor="{{ formErrors.author ? 'warn': 'primary' }}">
+            <input mdInput formControlName="author" placeholder="Name" type="text" required>
+            <md-hint>
+              <span [hidden]="(!formErrors.author)">{{formErrors.author}}</span>
             </md-hint>
-        </md-input-container>
-      </p>
-      
-      <button type="submit" md-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
-    </form>
-
+          </md-input-container>
+        </p>
+		<p>
+		<md-slider step="1" thumbLabel tickInterval="1" min="0" max="5"  formControlName="rating" value="rating" >
+            </md-slider>
+		</p>
+        <p>
+          <md-input-container class="full-width">
+            <textarea mdInput formControlName="comment" placeholder="Enter Your Comments" rows=12></textarea>
+			<md-hint>
+              <span [hidden]="(!formErrors.comment)">{{formErrors.comment}}</span>
+            </md-hint>
+          </md-input-container>
+        </p>
+        <button type="submit" md-button class="background-primary text-floral-white"
+                [disabled]="dishdetailForm.invalid">Submit</button>
+      </form>
+    </md-list>
   </div>
-
-</div>
-<div [hidden]="dish || errMess">
-  <md-spinner></md-spinner> <h4>Loading...Please Wait</h4>
-</div>
-<div *ngIf="errMess">
-  <h2>Error</h2>
-  <h4>{{errMess}}</h4>
-</div>
+ 
+	<div [hidden]="dish || errMess">
+		<md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
+	</div>
+ 
+	<div *ngIf="errMess">
+		<h2>Error</h2>
+		<h4>{{errMess}}</h4>
+	</div>
+	
+	
+</div> <!-- End container class -->
