--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
      fxLayoutAlign.gt-md="space-around center"
      fxLayoutGap="10px">
 
-<md-card *ngIf="dish" fxFlex>
+<md-card *ngIf="dish" fxFlex [@expand]>
   <md-card-header>
     <div md-card-avatar></div>
     <md-card-title>
@@ -27,14 +27,14 @@
   <h4>{{errMess}}</h4>
 </div>
 
-<md-card *ngIf="promotion" fxFlex>
+<md-card *ngIf="promotion" fxFlex [@expand]>
   <md-card-header>
     <div md-card-avatar></div>
     <md-card-title>
       <h3>{{promotion.name | uppercase}}</h3>
     </md-card-title>
   </md-card-header>
-  <img md-card-image src={{promotion.image}} alt={{promotion.name}}>
+  <img md-card-image src="{{BaseURL + promotion.image}}" alt={{promotion.name}}>
   <md-card-content>
     <p>{{promotion.description}}
     </p>
@@ -45,14 +45,14 @@
   <md-spinner></md-spinner> <h4>Loading...Please Wait</h4>
 </div>
 
-<md-card *ngIf="leader" fxFlex>
+<md-card *ngIf="leader" fxFlex [@expand]>
     <md-card-header>
       <div md-card-avatar></div>
       <md-card-title>
         <h3>{{leader.name | uppercase}}</h3>
       </md-card-title>
     </md-card-header>
-    <img md-card-image src={{leader.image}} alt={{leader.name}}>
+    <img md-card-image src="{{BaseURL + leader.image}}" alt={{leader.name}}>
     <md-card-content>
       <p>{{leader.designation}}</p>
       <p>{{leader.description}}
