--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
 </div>
 <div *ngIf="dishErrMess">
   <h2>Error</h2>
-  <h4>{{errMess}}</h4>
+  <h4>{{dishErrMess}}</h4>
 </div>
 
 <md-card *ngIf="promotion" fxFlex [@expand]>
@@ -41,8 +41,12 @@
   </md-card-content>
 </md-card>
 
-<div [hidden]="promotion">
+<div [hidden]="promotion || promotionErrMess">
   <md-spinner></md-spinner> <h4>Loading...Please Wait</h4>
+</div>
+<div *ngIf="promotionErrMess">
+  <h2>Error</h2>
+  <h4>{{promotionErrMess}}</h4>
 </div>
 
 <md-card *ngIf="leader" fxFlex [@expand]>
@@ -59,8 +63,12 @@
       </p>
     </md-card-content>
   </md-card>
-  <div [hidden]="leader">
+  <div [hidden]="leader || leaderErrMess">
     <md-spinner></md-spinner> <h4>Loading...Please Wait</h4>
+  </div>
+  <div *ngIf="leaderErrMess">
+    <h2>Error</h2>
+    <h4>{{leaderErrMess}}</h4>
   </div>
 
 </div>
